[gd_scene load_steps=4 format=3 uid="uid://dkmleq2q5mg10"]

[ext_resource type="Script" path="res://tomes/sunburst.gd" id="1_v8ekr"]
[ext_resource type="Texture2D" uid="uid://did3h60swj18b" path="res://art/sunburst_effect.png" id="2_6mejh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nj4lp"]
radius = 24.0

[node name="Sunburst" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_v8ekr")

[node name="BeadCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nj4lp")

[node name="BeadSprite" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_6mejh")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
lifetime = 2.0
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 3.0
scale_amount_max = 3.0
color = Color(0.96, 0.96, 0.6144, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
